--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-data-visualization",
+  "name": "accordion-component",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,9 @@
     "lint": "eslint './src/**/*.{ts,tsx}' --ignore-path .eslintignore --quiet --fix",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "if [ -z ${test_name} ]; then cypress run; else cypress run -s test/integration/**/${test_name}.spec.ts; fi"
+    "test": "if [ -z ${test_name} ]; then cypress run; else cypress run -s test/integration/**/${test_name}.spec.ts; fi",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "commitlint": {
     "extends": [
@@ -58,6 +60,14 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@types/lodash": "4.14.202",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
@@ -75,9 +85,11 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "storybook": "^7.6.17",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
